--- a/NIH NASA Project/data/Combining_Precipitation_and_Elevation_from_Raster.ipynb
+++ b/NIH NASA Project/data/Combining_Precipitation_and_Elevation_from_Raster.ipynb
@@ -385,7 +385,7 @@
         "FTP_TLS.ssl_version = ssl.PROTOCOL_TLSv1_2\n",
         "ftps = FTP_TLS()\n",
         "ftps.connect(ftp_site, 21)\n",
-        "ftps.login(\"diyankobhowmik.db@gmail.com\", \"diyankobhowmik.db@gmail.com\")\n",
+        "ftps.login(\"", \"",
         "ftps.prot_p()"
       ],
       "id": "prepared-assessment",
